feat: add virutal node test